v19-my-custom-scenario/rolling-update-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-update-deployment
  namespace: rolling-update
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: rolling-update
  template:
    metadata:
      labels:
        app: rolling-update
    spec:
      containers:
      - name: rolling-update-cntr
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html/index.html
            name: nginx-config
            subPath: index.html
      volumes:
        - name: nginx-config
          configMap:
            name: rolling-update-v1-cm
