v19-my-custom-scenario/rolling-update-deployment/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rolling-update-demo
spec:
  replicas: 5
  selector:
    matchLabels:
      app: rolling-update
  template:
    metadata:
      labels:
        app: rolling-update
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/index.html
              name: nginx-config
              subPath: index.html
      volumes:
        - name: nginx-config
          configMap:
            name: rolling-update-v2-cm
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 50
        - pause:
            duration: 10
