v19-my-custom-scenario/rolling-update-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rolling-update-svc
  namespace: rolling-update
spec:
  selector:
    app: rolling-update
  ports:
  - port: 80
    targetPort: 80
