v19-my-custom-scenario/rolling-update-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rolling-update-ingress
  labels:
    app.kubernetes.io/name: rolling-update-ingress
spec:
  rules:
  - host: http://rolling-update.demo.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rolling-update-svc
            port: 
              number: 80
